# B8A3

./: .gitignore  b8a3.jks  build.gradle
aesjni/: CMakeLists.txt  build.gradle
aesjni/src/main/: AndroidManifest.xml
aesjni/src/main/cpp/: JNIEncrypt.c  scandir.c  scandir.h
aesjni/src/main/java/com/aesjni/: AESEncrypt.java  SignatureTool.java
app/: build.gradle
app/src/androidTest/java/com/study/b8a3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.weex.js
app/src/main/java/com/study/b8a3/: Constants.java  FloatingWindowActivity.java  MainActivity.java  (+3 more)
app/src/main/res/anim/: line_anim.xml  rotate_anim.xml
app/src/main/res/animator/: property_anim.xml
app/src/main/res/drawable/: frame_bomb.xml
app/src/main/res/layout/: activity_aidltest.xml  activity_animation.xml  activity_animation_property.xml  activity_dialog.xml  activity_floating_window.xml  activity_fragment.xml  activity_frame.xml  activity_home.xml  activity_layout.xml  activity_main.xml  activity_provider.xml  activity_shimmer.xml  activity_single_instance.xml  activity_stub_view.xml  activity_third.xml  activity_threads.xml  activity_touch.xml  activity_tween.xml  app_bar_main.xml  content_main.xml  first_activity.xml  fragment_content.xml  fragment_home_main.xml  layout_test.xml  recycle_view_layout.xml  second_activity.xml  second_cat_my_activity.xml  title.xml  view_stub_test.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: my_widget_provider_info.xml
(+81 files in other folders)
